--- a/control
+++ b/control
@@ -8,9 +8,9 @@
  inkind       = 3
  trans        = 0
  dtime        = 60
- dayint       = 32
+ dayint       = 25
  outtime      = 1
- grdwid       = 10.0
+ grdwid       = 2.0
  lonw         = -180.0
  lone         = 180.0
  latn         = 85.5
@@ -19,19 +19,19 @@
  rflg         = 0
  wiflg        = 0
  vflg         = 0
- param_file   = './control_bethy/76_paramslist'
- mapping_file_global = './control_bethy/lores_28params.map'
+ param_file   = './control_bethy/73_paramslist_new'
+ mapping_file_global = './control_bethy/hires_28params.map'
  datfile      = './control_bethy/gv41_data'
- grid_file    = './control_bethy/bethy_loresgrid3veg_faparratio.nc'
- interp_file  = './control_bethy/tm2tm.nc'
+ grid_file    = './control_bethy/bethy_grid3veg_v2.nc'
+ interp_file  = './control_bethy/bethy2tm.nc'
  faparfile    = 'fapar_redres_'
- faparfile_global = 'fapar_lores_serr.nc'
+ faparfile_global    = 'fapar_hires.nc'
  yearin0      = 1979
  yearin1      = 2008
- dprecip_file = './inputs/climate/forcing.lores.precip.1979-2008.nc'
- dtmax_file   = './inputs/climate/forcing.lores.tmax.1979-2008.nc'
- dtmin_file   = './inputs/climate/forcing.lores.tmin.1979-2008.nc'
- dswdown_file = './inputs/climate/forcing.lores.swdown.1979-2008.nc'
+ dprecip_file = './inputs/climate/forcing.hires.precip.1979-2008.nc'
+ dtmax_file   = './inputs/climate/forcing.hires.tmax.1979-2008.nc'
+ dtmin_file   = './inputs/climate/forcing.hires.tmin.1979-2008.nc'
+ dswdown_file = './inputs/climate/forcing.hires.swdown.1979-2008.nc'
  dummyfluxes  = './inputs/co2fluxes.dat'
  jacdir       = './inputs/jactd/'
  datdir       = './inputs/gv08/'
