--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 &control
- year0        = 2015
- year1        = 2015
+ year0        = 2010
+ year1	      = 2010
  irestart     = 0
  day0         = 1
  nspin        = 1
@@ -10,7 +10,7 @@
  dtime        = 60
  dayint       = 32
  outtime      = 1
- grdwid       = 2.0
+ grdwid       = 10.0
  lonw         = -180.0
  lone         = 180.0
  latn         = 85.5
@@ -20,26 +20,26 @@
  wiflg        = 0
  vflg         = 0
  param_file   = './control_bethy/95_paramslist'
- mapping_file_global = './control_bethy/hires_35params_scope.map'
+ mapping_file_global = './control_bethy/lores_35params_scope.map'
  datfile      = './control_bethy/gv41_data'
- grid_file    = './control_bethy/bethy_grid3veg_v2.nc'
- interp_file  = './control_bethy/bethy2tm.nc'
+ grid_file    = './control_bethy/bethy_loresgrid3veg_faparratio.nc'
+ interp_file  = './control_bethy/tm2tm.nc'
  faparfile    = 'fapar_redres_'
- faparfile_global    = 'fapar_hires_serr.nc'
- yearin0      = 1980
- yearin1      = 2015
- dprecip_file = './inputs/climate/cruncep_forcing.daily.Precip.1980-2015.nc'
- dtmax_file   = './inputs/climate/cruncep_forcing.daily.Tmax.1980-2015.nc'
- dtmin_file   = './inputs/climate/cruncep_forcing.daily.Tmin.1980-2015.nc'
- dswdown_file = './inputs/climate/cruncep_forcing.daily.SWdown.1980-2015.nc'
+ faparfile_global = 'fapar_lores_serr.nc'
+ yearin0      = 1979
+ yearin1      = 2011
+ dprecip_file = './inputs/climate/forcing.lores.precip.1979-2011.nc'
+ dtmax_file   = './inputs/climate/forcing.lores.tmax.1979-2011.nc'
+ dtmin_file   = './inputs/climate/forcing.lores.tmin.1979-2011.nc'
+ dswdown_file = './inputs/climate/forcing.lores.swdown.1979-2011.nc'
  dummyfluxes  = './inputs/co2fluxes.dat'
  jacdir       = './inputs/jactd/'
  datdir       = './inputs/gv08/'
  bgrdir       = './inputs/background/'
- outdir       = './output/'
+ outdir       = 'output/'
  year0_site   = 2000
  year1_site   = 2003
- site_file    = './control_bethy/no_sites'
+ site_file    = './control_bethy/no_sites'	
  mapping_file_site = './control_bethy/site_specs.dat.map'
  optpftg      = .false.
  optpftl      = .false.
