Setup option for prescribing LAI to SCOPE fluo
You can now set a lai text file to feed into the model to prescribe
lai to scope fluorescence calculations. The prescribed lai is read in
the mo_climate module, and fed to fluo via bethy. To switch it off,
just comment out that line in the bethy module.
In doing this, we realized that if the lai given to fluo is zero, then
there is an double allocation error, as some deallocate statements were
within the lai if statement. We have remedied this.

--- a/control
+++ b/control
@@ -32,6 +32,7 @@
  dtmax_file   = './inputs/climate/cruncep_forcing.daily.Tmax.1980-2015.nc'
  dtmin_file   = './inputs/climate/cruncep_forcing.daily.Tmin.1980-2015.nc'
  dswdown_file = './inputs/climate/cruncep_forcing.daily.SWdown.1980-2015.nc'
+ plai_file    = './inputs/prescribed_lai/modislai_yuan_2015_vp.txt'
  dummyfluxes  = './inputs/co2fluxes.dat'
  jacdir       = './inputs/jactd/'
  datdir       = './inputs/gv08/'
