--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 &control
- year0        = 2010
- year1	      = 2010
+ year0        = 1979
+ year1	      = 1980
  irestart     = 0
  day0         = 1
  nspin        = 1
@@ -8,7 +8,7 @@
  inkind       = 3
  trans        = 0
  dtime        = 60
- dayint       = 32
+ dayint       = 10
  outtime      = 1
  grdwid       = 10.0
  lonw         = -180.0
@@ -19,28 +19,28 @@
  rflg         = 0
  wiflg        = 0
  vflg         = 0
- param_file   = './control_bethy/112_scope_paramslist_deltax'
- mapping_file_global = './control_bethy/lores_40params_scope_npars112.map'
- datfile      = './control_bethy/gv41_data'
- grid_file    = './control_bethy/bethy_loresgrid3veg_faparratio.nc'
+ param_file   = './control_bethy/118_scope_paramslist'
+ mapping_file_global = './control_bethy/lores_28params.map'
+ datfile      = './control_bethy/no_stations'
+ grid_file    = './control_bethy/bethy_loresgrid3veg_v2.nc'
  interp_file  = './control_bethy/tm2tm.nc'
  faparfile    = 'fapar_redres_'
- faparfile_global = 'fapar_lores_serr.nc'
+ faparfile_global    = 'fapar_lores.nc'
  yearin0      = 1979
- yearin1      = 2011
- dprecip_file = './inputs/climate/forcing.lores.precip.1979-2011.nc'
- dtmax_file   = './inputs/climate/forcing.lores.tmax.1979-2011.nc'
- dtmin_file   = './inputs/climate/forcing.lores.tmin.1979-2011.nc'
- dswdown_file = './inputs/climate/forcing.lores.swdown.1979-2011.nc'
- dummyfluxes  = './inputs/co2fluxes.dat'
- jacdir       = './inputs/jactd/'
- datdir       = './inputs/gv08/'
- bgrdir       = './inputs/background/'
+ yearin1      = 2005
+ dprecip_file = './input/climate/forcing.lores.precip.1979-2005.nc'
+ dtmax_file   = './input/climate/forcing.lores.tmax.1979-2005.nc'
+ dtmin_file   = './input/climate/forcing.lores.tmin.1979-2005.nc'
+ dswdown_file = './input/climate/forcing.lores.swdown.1979-2005.nc'
+ dummyfluxes  = './input/co2fluxes.dat'
+ jacdir       = './input/jactd/'
+ datdir       = './input/gv04/'
+ bgrdir       = './input/background/'
  outdir       = 'output/'
- year0_site   = 2000
+ year0_site   = 2003
  year1_site   = 2003
- site_file    = './control_bethy/no_sites'	
- mapping_file_site = './control_bethy/site_specs.dat.map'
+ site_file    = './control_bethy/site_specs_hainich1.dat'	
+ mapping_file_site = './control_bethy/site_specs_hainich1_scope.dat.map'
  optpftg      = .false.
  optpftl      = .false.
  optbsmg      = .false.
