--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 &control
- year0        = 1979
- year1	      = 1980
+ year0        = 2005
+ year1	      = 2005
  irestart     = 0
  day0         = 1
  nspin        = 1
@@ -8,7 +8,7 @@
  inkind       = 3
  trans        = 0
  dtime        = 60
- dayint       = 1
+ dayint       = 32
  outtime      = 1
  grdwid       = 10.0
  lonw         = -180.0
@@ -42,6 +42,7 @@
  site_file    = './control_bethy/site_specs_US-NR1.dat'	
  mapping_file_site = './control_bethy/site_specs_US-NR1_scope.dat.map'
  site_file_lai = './input/eddy_sites/lai.US-NR1.constant.txt'
+ siteforceflag = .true.
  optpftg      = .false.
  optpftl      = .false.
  optbsmg      = .false.
